--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss-import": "^12.0.1",
     "postcss-nesting": "^7.0.1",
     "tailwindcss": "^1.1.2",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vuex": "^3.6.2"
   }
 }
